--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -1,22 +1,36 @@
-nav {
+/* nav {
     background-color: rgb(32, 125, 94);
-    /* height: 64px; */
-}   
+    height: 64px;
+}    */
 
 .tab-list {
-    background-color: #171717;
+    /* background-color: #171717; */
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-block: 0.5em;
+    /* padding-block: 0.5em; */
     height: 64px;
+    overflow: hidden;
+    max-width: 400px;
+    margin: auto;
+    border-top: 1px solid var(--tablist-border);
+}
+
+.tab-list > div {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
 }
 
 .tab-list button {
-    padding: 0.25em;
-    background-color: whitesmoke;
-    border: 1px solid rgb(0 0 0 / 0.1);
-    margin-right: 0.125em;
+    padding: 0.5em;
+    /* background-color: whitesmoke; */
+    /* border: 1px solid rgb(0 0 0 / 0.1); */
+    border: none;
+    /* margin-right: 0.125em; */
     cursor: pointer;
-    border-radius: 4px;
+    /* border-radius: 4px; */
+    width: 100%;
+    height: 64px;
+    aspect-ratio: 1;
 }
