--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -1,7 +1,24 @@
 .player {
-    background-color: yellowgreen;
+    background-color: var(--minimised-player-bg);
     /* height: 100px; */
     position: absolute;
     inset-inline: 0;
     inset-block-end: 64px;
+    margin: auto;
+    padding: 0.5em 1em;
+    max-width: 1280px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0px 6px;
+    box-shadow: 0px -2px 2px var(--shadow);
+}
+
+.player-toggle {
+    border: none;
+    border-radius: 50%;
+    aspect-ratio: 1;
+    padding: 0.5em;
+    height: 44px;
+    cursor: pointer;
 }
