--- a/src/components/tabs.css
+++ b/src/components/tabs.css
@@ -1,3 +1,10 @@
 section {
     height: calc(100vh - 64px); 
+    padding: 1em;
+}
+
+.icon {
+    width: 100%;
+    height: 100%;
+    padding: 0.9em;
 }
