create a marquee effect when audio title overflows the screen

--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -1,24 +1,87 @@
 .player {
-    background-color: var(--minimised-player-bg);
-    /* height: 100px; */
-    position: absolute;
-    inset-inline: 0;
-    inset-block-end: 64px;
-    margin: auto;
-    padding: 0.5em 1em;
-    max-width: 1280px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 0px 6px;
-    box-shadow: 0px -2px 2px var(--shadow);
+  background-color: var(--minimised-player-bg);
+  /* height: 100px; */
+  position: absolute;
+  inset-inline: 0;
+  /*inset-block-end: 0px; */
+  top: calc(100dvh - (var(--nav-tabs-height) * 2));
+  margin: auto;
+  padding: 0.5em 1em;
+  max-width: 1280px;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0px 6px;
+  box-shadow: 0px -2px 2px var(--shadow);
 }
 
 .player-toggle {
-    border: none;
-    border-radius: 50%;
-    aspect-ratio: 1;
-    padding: 0.5em;
-    height: 44px;
-    cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  aspect-ratio: 1;
+  /* padding: 0.1rem; */
+  /* height: 44px; */
+  cursor: pointer;
+}
+
+.player-toggle div {
+  width: 100%;
+}
+
+.details {
+  max-width: calc(100vw - (86px));
+  overflow: hidden;
+}
+
+.details__title-wrapper {
+  white-space: nowrap;
+  overflow: hidden;
+}
+.details__title {
+  text-overflow: ellipsis;
+  margin-bottom: -0.2rem;
+  position: relative;
+}
+
+.details__author {
+  color: var(--secondary-text-color);
+}
+
+
+.details__title-wrapper {
+    --width-el: attr(data-width);
+    display: flex;
+    flex-direction: row;
+    white-space: nowrap;
+    width: calc( var(--width-el) * 1px);
+}
+/* 
+.details__title::after {
+  content: attr(data-name);
+  position: absolute;
+  top: 0;
+  --width-value: attr(data-width);
+  width: calc(var(--width-value) * 1px);
+  background-color: green;
+  height: 100%;
+} */
+
+.details__title.marquee {
+  --width-val: attr(data-width);
+  animation: moveLeft 12s linear infinite;
+  animation-delay: 4s;
+  /* overflow: visible; */
+}
+
+@keyframes moveLeft {
+  0% {
+    translate: 0;
+  }
+
+  50%,
+  100% {
+    translate: -100%;
+
+  }
 }
