--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     /* padding-block: 0.5em; */
-    height: 64px;
+    height: var(--nav-tabs-height);
     overflow: hidden;
     max-width: 400px;
     margin: auto;
@@ -31,6 +31,6 @@
     cursor: pointer;
     /* border-radius: 4px; */
     width: 100%;
-    height: 64px;
+    max-height: 64px;
     aspect-ratio: 1;
 }
