--- a/src/components/tabs.css
+++ b/src/components/tabs.css
@@ -1,10 +1,11 @@
 section {
     height: calc(100vh - 64px); 
+    height: calc(100dvh - 64px); 
     padding: 1em;
 }
 
 .icon {
-    width: 100%;
-    height: 100%;
-    padding: 0.9em;
+    width: 48px;
+    height: 48px;
+    padding: 0.8rem;
 }
