--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 :root {
-  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: Satoshi, Arial, sans-serif;
+  font-family: 'Satoshi', Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -90,4 +89,9 @@ h2 {
 
 .hidden {
   display: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
