--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import './satoshi.css';
+
 :root {
-  font-family: 'Satoshi', Arial, sans-serif;
+  font-family: 'Satoshi-Regular', Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -78,6 +80,9 @@ body {
   min-height: 100vh;
 }
 
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Satoshi-Bold';
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -85,6 +90,7 @@ h1 {
 
 h2 {
   margin-bottom: 0.25em;
+  font-weight: bold;
 }
 
 .hidden {
