--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -2,18 +2,19 @@
   background-color: var(--minimised-player-bg);
   position: absolute;
   inset-inline: 0;
-  /*inset-block-end: 0px; */
-  top: calc(100dvh - (var(--nav-tabs-height) * 2));
   margin: auto;
-  padding: 0.5em 1em;
-  max-width: 1280px;
-  min-width: 320px;
-  width: 100vw;
+  height: var(--nav-tabs-height);
+  border-block: 1px solid var(--player-border);
+  padding: 0.3em 1em 0.375em 1em;
+}
+
+.player-content {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 0px 6px;
-  box-shadow: 0px -2px 2px var(--shadow);
+  max-width: 1280px;
+  margin: auto;
 }
 
 .player-toggle {
@@ -48,13 +49,14 @@
   position: absolute;
   right: 1rem;
   top: 1rem;
-  z-index: 99;
+  z-index: var(--top-layer);
 }
+
 .details__title {
   text-overflow: ellipsis;
   margin-bottom: -0.1rem;
   position: relative;
-  font-family: 'Satoshi-Bold';
+  font-family: "Satoshi-Bold";
 }
 
 .details__author {
