--- a/src/components/tabs.css
+++ b/src/components/tabs.css
@@ -2,6 +2,8 @@ section {
   height: calc(100vh - 64px);
   height: calc(100dvh - 64px);
   padding: 1em;
+  padding-bottom: calc(var(--nav-tabs-height) + 8px);
+  overflow: hidden auto;
 }
 
 .icon {
