--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,9 @@
   -webkit-text-size-adjust: 100%;
 
   --accent-color: #0f6bff;
+  --error-bg: hsl(0, 100%, 37%);
+  --success-bg: hsl(83, 100%, 30%);
+  --info-bg: hsl(43, 100%, 76%);
   
   --bg-color: hsl(0, 0%, 14%);
   --player-border: rgba(255, 255, 255, 0.08);
@@ -119,4 +122,8 @@ h2 {
 img {
   display: block;
   max-width: 100%;
+}
+
+span.bold {
+  font-family: 'Satoshi-Bold';
 }
