--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   width: 100%;
   height: 100vh;
@@ -8,5 +8,6 @@
 .container {
   max-width: 1280px;
   width: 100%;
-  height: 100vh;
+  margin: auto;
+  /* height: 100vh; */
 }
