--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -7,6 +7,7 @@
   border-block: 1px solid var(--player-border);
   padding: 0.3em 1em 0.375em 1em;
   top: calc(100dvh - (var(--nav-tabs-height) * 2));
+  z-index: var(--top-layer);
 }
 
 .player-content {
@@ -39,17 +40,17 @@
   overflow: hidden;
 }
 
-.fade {
+.details__title-wrapper::after {
+  content: "";
+  position: absolute;
+  right: 1rem;
   width: 10px;
+  height: 22px;
   background-image: linear-gradient(
     to right,
     transparent,
     var(--minimised-player-bg)
   );
-  height: 22px;
-  position: absolute;
-  right: 1rem;
-  top: 1rem;
   z-index: var(--top-layer);
 }
 
