--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@
   --disabled-stroke: rgb(100, 100, 100);
   --disabled-bg: gray;
   --button-bg: hsl(0, 0%, 22%);
+  --button-hover-color: hsl(0, 0%, 26%);
 
   --top-layer: 100;
   --middle-layer: 0;
@@ -71,6 +72,7 @@ svg {
     --disabled-stroke: rgb(109, 109, 109);
     --disabled-bg: gray;
     --button-bg: hsl(0, 0%, 94%);
+    --button-hover-color: hsl(0, 0%, 90%);
   }
 
   a:hover {
@@ -145,4 +147,23 @@ span.bold {
   display: grid;
   place-items: center;
   background-color: transparent;
+}
+
+.icon-button:hover {
+  background: var(--button-hover-color);
+}
+
+.accent-button {
+  background: var(--accent-color);
+  scale: 1.2;
+  color: white;
+}
+
+.accent-button:hover {
+  background: var(--accent-color);
+  filter: brightness(110%);
+}
+
+.accent-button svg {
+  stroke: var(--white);
 }
