refined title display in player

--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -124,8 +124,9 @@
 }
 
 .maximized .details::after {
-  background: linear-gradient(to left, var(--bg-color), transparent);
+  background: linear-gradient(to left, var(--bg-color), var(--bg-color) 50%, transparent);
   right: 0;
+  width: 1.4rem;
 }
 
 .details__title-wrapper {
