--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -9,7 +9,7 @@
   padding-top: 0.375rem;
   top: calc(100dvh - (var(--nav-tabs-height) * 2));
   z-index: var(--middle-layer);
-  animation: slideUp 60ms ease-in-out;
+  animation: slideUp 100ms ease-in-out;
 }
 
 @keyframes slideUp {
@@ -25,15 +25,14 @@
 
 .maximized {
   all: unset;
-  display: block;
-  height: 100%;
+  position: absolute;
+  inset: 0;
   background-color: var(--bg-color);
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-
-  animation: slideUp 60ms ease-in-out;
+  transition: all 240ms ease-in-out;
 }
 
 .maximized * {
@@ -52,10 +51,6 @@
   gap: 0px 6px;
   max-width: 1280px;
 }
-/* 
-.player-content button {
-  background-color: var(--button-bg);
-} */
 
 .player-content button:hover {
   filter: brightness(110%);
@@ -136,7 +131,6 @@
   overflow: hidden;
   white-space: nowrap;
   width: calc(var(--width-el) * 1px);
-  /* position: relative; */
 }
 
 .details__title-wrapper::after {
