--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -8,7 +8,6 @@
   padding: 0.3rem 1rem;
   padding-top: 0.375rem;
   top: calc(100dvh - (var(--nav-tabs-height) * 2));
-  z-index: var(--middle-layer);
   animation: slideUp 100ms ease-in-out;
 }
 
@@ -32,6 +31,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  z-index: var(--top-layer);
   transition: all 240ms ease-in-out;
 }
 
