--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -56,7 +56,7 @@
   filter: brightness(110%);
 }
 
-.player-toggle {
+/* .player-toggle {
   border: none;
   border-radius: 50%;
   aspect-ratio: 1;
@@ -66,7 +66,7 @@
   display: grid;
   place-items: center;
   background-color: var(--button-bg);
-}
+} 
 
 .player-toggle:disabled {
   background-color: transparent;
@@ -80,6 +80,7 @@
 .player-toggle div {
   width: 100%;
 }
+*/
 
 .details {
   overflow: hidden;
