added options to skip and rewind 10 seconds, added like button - no functionality

--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -206,6 +206,11 @@
   padding-block: 1rem 0.5rem;
 }
 
+.audio-actions {
+  display: flex;
+  gap: 1rem;
+}
+
 .hide-player-btn {
   margin-block: auto 4rem;
 }
