Display the favourites in the dashboard and placeholder if no favourites

--- a/src/index.css
+++ b/src/index.css
@@ -138,6 +138,11 @@ img {
   max-width: 100%;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+}
+
 span.bold {
   font-family: "Satoshi-Bold";
 }
