--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -33,3 +33,44 @@
 .tab-list button:hover {
   background-color: var(--nav-button-hover-color);
 }
+
+.tab-indicator {
+  background-color: #0f6bff;
+  max-width: 100%;
+  height: 64px;
+  margin: auto;
+  mix-blend-mode: lighten;
+}
+
+.tab-indicator-vertical {
+  width: 100%;
+}
+
+@media (min-width: 1000px) {
+  .tab-list-wrapper {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    height: 100%;
+    max-width: 200px;
+    border-right: 1px solid var(--big-screen-stroke);
+  }
+
+  .tab-list {
+    height: unset;
+  }
+
+  .tab-list button {
+    display: flex;
+    min-width: 200px;
+    align-items: center;
+    justify-content: flex-start;
+    padding-inline-start: 1.8rem;
+  }
+
+  .tab-list > div {
+    display: block;
+  }
+}
