--- a/src/components/tabs.css
+++ b/src/components/tabs.css
@@ -8,6 +8,14 @@ section {
   animation: slideUp 180ms ease-in-out;
 }
 
+@media (min-width: 1000px) {
+  section {
+    width: calc(100% - 200px);
+    height: 100vh;
+    padding-block-start: 2rem;
+  }
+}
+
 .icon {
   width: 48px;
   height: 48px;
