--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  --accent-color: #0f6bff;
+  --accent-color: #6929d7;
   --error-bg: hsl(0, 100%, 37%);
   --success-bg: hsl(83, 100%, 30%);
   --info-bg: hsl(43, 100%, 26%);
